--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Var nome = document.getElementById("nome").value;
       Var cognome = document.getElementById("cognome").value;
       Var indirizzo = document.getElementById("indirizzo").value;
-      document.getElementById("risultato").innerHTML= 
+      document.getElementById("risultato"); risultato.innerHTML= 
         "<h3>Dati inseriti:</h3>" + "Nome:"+nome +"<br>" + "Cognome:"+cognome +"<br>"+ "Indirizzo:"+ indirizzo;
     }
   </script>
