--- a/Anagrafica.html
+++ b/Anagrafica.html
@@ -1,9 +1,8 @@
 <html>
-  <title> </title>
   <head>
-    
+    <title>Dati Inseriti</title>
   </head>
   <body>
-    
+    <h1>Inserisci dati:</h1>
   </body>
 </html>
