Add input fields for user data in Anagrafica.html
Added input fields for user data collection including name, surname, address, city, postal code, and age.

--- a/Anagrafica.html
+++ b/Anagrafica.html
@@ -4,5 +4,21 @@
   </head>
   <body>
     <h1>Inserisci dati:</h1>
+    Nome: <input type="text" id="nome"> <br><br>
+  Cognome: <input type="text" id="cognome"> <br><br>
+  Indirizzo: <input type="text" id="indirizzo"> <br><br>
+  Città : <input type="text" id="città"> <br><br>
+  CAP : <input type="text" id="CAP"> <br><br>
+  Età : <input type="text" id="Età"> <br><br>
+    <script>
+      function(){
+      Var Nome = document.getElementById("nome");
+
+
+
+        
+      }
+    </script>
+    
   </body>
 </html>
