Add button to display data and fix variable scope
Added a button to trigger mostraDati function and fixed variable declarations.

--- a/Anagrafica.html
+++ b/Anagrafica.html
@@ -10,6 +10,7 @@
   Città : <input type="text" id="città"> <br><br>
   CAP : <input type="text" id="cap"> <br><br>
   Età : <input type="text" id="età"> <br><br>
+  <input type="button" value="cliccami" onclick="mostraDati()">
     <script>
       function mostraDati(){
       Var Nome = document.getElementById("nome").value;
@@ -21,6 +22,9 @@
       document.getElementById("ris").innerHTML=print
       }
     </script>
+
+
+    
     <p id="ris"></p>
   </body>
 </html>
