--- a/EsArray.html
+++ b/EsArray.html
@@ -12,7 +12,7 @@
     let maggiori50=[];
     for(let i=0;i< 100; i++){
       let n = Math.random()*200-100;
-      n= Math.random(n);
+      n= Math.round(n);
       numeri[i] = n;
       somma = somma + n;
       if(i==0){
