--- a/EsArray.html
+++ b/EsArray.html
@@ -13,7 +13,7 @@
     for(let i=0;i< 100; i++){
       let n = Math.random()*200-100;
       n= Math.round(n);
-      numeri[i] = n + "|";
+      numeri[i] = n;
       somma = somma + n;
       if(i==0){
         max=n;
@@ -32,7 +32,7 @@
      document.write("Minimo:" + min+ "<br><br>");
      document.write("Tutti i numeri:<br>");
     for(let i=0;i< maggiori50.length;i++){
-      document.write(maggiori50[i] +"");
+      document.write(maggiori50[i] +" | ");
     }
   </script>
 </body>
