Change canvas fill color from light blue to blue

--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -7,7 +7,7 @@
     <script>
       const canvas = document.getElementById("myCanvas");
       const ctx = canvas.getContext("2d");
-      ctx.fillStyle = "light blue";
+      ctx.fillStyle = "blue";
       ctx.fillRect = (0,0,600,500);
     </script>
   </body>
