--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -12,6 +12,9 @@
       ctx.beginPath();
       ctx.arc(450,400,350,0,2*Math.PI);
       ctx.stroke();
+      ctx.moveTo(450,750);
+      ctx.lineTo(400,700);
+      ctx.stroke();
     </script>
   </body>
 </html>
