Add line to draw a line from circle to bottom

--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -12,6 +12,7 @@
       ctx.beginPath();
       ctx.arc(450,400,350,0,2*Math.PI);
       ctx.stroke();
+      ctx.beginPath();
       ctx.moveTo(450,750);
       ctx.lineTo(400,700);
       ctx.stroke();
