Add line from center to left in StarAndCircle

--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -16,6 +16,9 @@
       ctx.moveTo(450,50);
       ctx.lineTo(300,250);
       ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(300,250);
+      ctx.lineTo(55,250);
     </script>
   </body>
 </html>
