Fix stroke method call in StarAndCircle.html

--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -19,6 +19,7 @@
       ctx.beginPath();
       ctx.moveTo(300,250);
       ctx.lineTo(55,250);
+      ctx.stroke();
     </script>
   </body>
 </html>
