Adjust line coordinates in StarAndCircle.html

--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -18,7 +18,11 @@
       ctx.stroke();
       ctx.beginPath();
       ctx.moveTo(300,250);
-      ctx.lineTo(55,250);
+      ctx.lineTo(133.77,250);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(133.77,250);
+      ctx.lineTo(300,550);
       ctx.stroke();
     </script>
   </body>
