--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -22,7 +22,15 @@
       ctx.stroke();
       ctx.beginPath();
       ctx.moveTo(133.77,250);
-      ctx.lineTo(300,550);
+      ctx.lineTo(300,500);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(300,500);
+      ctx.lineTo(269.72,700);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(269.72,700);
+      ctx.lineTo(450,650);
       ctx.stroke();
     </script>
   </body>
