Add lines to draw a star shape in canvas

--- a/StarAndCircle.html
+++ b/StarAndCircle.html
@@ -32,6 +32,26 @@
       ctx.moveTo(269.72,700);
       ctx.lineTo(450,650);
       ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(450,650);
+      ctx.lineTo(630.28,700);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(630.28,700);
+      ctx.lineTo(550,500);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(550,500);
+      ctx.lineTo(766.23,250);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(766.23,250);
+      ctx.lineTo(550,250);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(550,250);
+      ctx.lineTo(450,50);
+      ctx.stroke();
     </script>
   </body>
 </html>
