--- a/anagrafica5.0.html
+++ b/anagrafica5.0.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <title>Anagrafica 5.0</title>
+</head>
+<body>
+    <h2>Anagrafica Utente</h2>
+    Nome: <input type="text" id="nome"><br><br>
+    Cognome: <input type="text" id="cognome"><br><br>
+    Città: <input type="text" id="citta"><br><br>
+    CAP: <input type="text" id="cap"><br><br>
+    Data di nascita: <input type="date" id="dataNascita"><br><br>
 
+    Sesso:<br>
+    <input type="radio" id="sessoM" name="sesso" value="Maschio"> Maschio<br>
+    <input type="radio" id="sessoF" name="sesso" value="Femmina"> Femmina<br>
+    <input type="radio" id="sessoAltro" name="sesso" value="Altro"> Altro<br><br>
+
+    Mezzi posseduti:<br>
+    <input type="checkbox" id="auto" value="Auto"> Auto
+    <input type="checkbox" id="moto" value="Moto"> Moto
+    <input type="checkbox" id="bici" value="Bici"> Bici
+    <input type="checkbox" id="cavallo" value="Cavallo"> Cavallo
+    <input type="checkbox" id="deltaplano" value="Deltaplano"> Deltaplano<br><br>
+
+    Provincia:
+    <select id="provincia">
+        <option value="MI">Milano</option>
+        <option value="VA">Varese</option>
+        <option value="NA">Napoli</option>
+        <option value="TO">Torino</option>
+        <option value="FI">Firenze</option>
+    </select><br><br>
+
+    Materie preferite:<br>
+    <select id="materie" multiple size="5">
+        <option value="Italiano">Italiano</option>
+        <option value="Storia">Storia</option>
+        <option value="Matematica">Matematica</option>
+        <option value="TPSIT">TPS</option>
+        <option value="Inglese">Inglese</option>
+    </select><br><br>
+
+    <button onclick="mostraRisultato()">Invia e Salva</button>
+    <br><br>
+    <a href="stampa.html"><button>Vai alla Pagina di Stampa</button></a>
+
+    <script>
+        // Carica dati esistenti o crea array vuoto
+        let ele = JSON.parse(localStorage.getItem("elenco")) || [];
+
+        function getGenerazione(anno) {
+            if (anno >= 2013) return "Generazione Alpha";
+            else if (anno >= 1997) return "Generazione Z";
+            else if (anno >= 1981) return "Millennials";
+            else if (anno >= 1965) return "Generazione X";
+            else if (anno >= 1946) return "Baby Boomers";
+            else if (anno >= 1928) return "Generazione Silenziosa";
+            else if (anno >= 1901) return "Greatest Generation";
+            else return "Generazione non definita";
+        }
+
+        function mostraRisultato() {
+            let persona = {
+                nome: document.getElementById("nome").value,
+                cognome: document.getElementById("cognome").value,
+                citta: document.getElementById("citta").value,
+                cap: document.getElementById("cap").value,
+                dataNascita: document.getElementById("dataNascita").value,
+                sesso: (function() {
+                    let r = document.getElementsByName("sesso");
+                    for(let i=0; i<r.length; i++) if(r[i].checked) return r[i].value;
+                    return "N/D";
+                })(),
+                mezzi: (function() {
+                    let m = [];
+                    let ids = ["auto", "moto", "bici", "cavallo", "deltaplano"];
+                    ids.forEach(id => { if(document.getElementById(id).checked) m.push(document.getElementById(id).value); });
+                    return m;
+                })(),
+                provincia: document.getElementById("provincia").value,
+                materie: (function() {
+                    let lista = [];
+                    let opzioni = document.getElementById("materie").options;
+                    for (let i = 0; i < opzioni.length; i++) if (opzioni[i].selected) lista.push(opzioni[i].value);
+                    return lista;
+                })()
+            };
+
+            let anno = new Date(persona.dataNascita).getFullYear();
+            persona.eta = new Date().getFullYear() - anno;
+            persona.generazione = getGenerazione(anno);
+
+            ele.push(persona);
+            localStorage.setItem("elenco", JSON.stringify(ele));
+          
+        }
+    </script>
+</body>
+</html>
