Update link to print page in anagrafica5.0.html

--- a/anagrafica5.0.html
+++ b/anagrafica5.0.html
@@ -44,7 +44,7 @@
 
     <button onclick="mostraRisultato()">Invia e Salva</button>
     <br><br>
-    <a href="stampa.html"><button>Vai alla Pagina di Stampa</button></a>
+    <a href="stampaAnagrafica.html"><button>Vai alla Pagina di Stampa</button></a>
 
     <script>
         // Carica dati esistenti o crea array vuoto
