Update link to return to anagrafica5.0.html

--- a/stampaAnagrafica.html
+++ b/stampaAnagrafica.html
@@ -33,7 +33,7 @@
         </script>
 
         <br>
-        <a href="index.html">Torna all'inserimento</a>
+        <a href="anagrafica5.0.html">Torna all'inserimento</a>
         <br><br>
         <button onclick="localStorage.clear(); location.reload();">Svuota tutto l'elenco</button>
     </body>
